<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workout.StopwatchFragment">
    <Chronometer
        android:id="@+id/stopwatch_tv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/defaultTime"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_resume"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/twcolor"
        android:text="@string/resume"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_start"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_tv"
        app:layout_constraintVertical_bias="0.498" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/twcolor"
        android:text="@string/start"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_resume"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>