<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workout.RunFragment">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/back_bt"
                style="@style/ButtonMain"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/arrow_white" />
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/ButtonMain"
                app:titleTextColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintStart_toEndOf="@id/back_bt"
                android:gravity="center_vertical"
                app:title="@string/running"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="0.0"
        android:textSize="60sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="2dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="5"
                android:textSize="24sp"
                android:text="@string/distance"
                style="@style/EditText"
                />
            <TextView
                android:id="@+id/tv_trip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="5"
                android:text="@string/defaultDistance"
                style="@style/EditText" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"        >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="50"
                android:textSize="24sp"
                android:text="@string/time"
                style="@style/EditText" />
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="50"
                android:text="@string/defaultTime"
                style="@style/EditText"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="50"
                android:text="@string/avSpeed"
                android:textSize="24sp"
                style="@style/EditText" />
            <TextView
                android:id="@+id/tv_av"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="50"
                android:text="@string/defaultAV"
                style="@style/EditText"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="50"
                android:text="@string/calories"
                android:textSize="24sp"
                style="@style/EditText"/>
            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="50"
                android:text="@string/defaultDistance"
                style="@style/EditText"/>
        </TableRow>
<!--        <TableRow-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent">-->
<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_column="0"-->
<!--                android:layout_weight="50"-->
<!--                android:background="@drawable/tablelayoutwear"-->
<!--                android:text="@string/chsr"-->
<!--                style="@style/EditText"/>-->
<!--            <TextView-->
<!--                android:id="@+id/tv_chsr"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_column="1"-->
<!--                android:layout_weight="50"-->
<!--                android:background="@drawable/tablelayoutwear"-->
<!--                android:text="@string/defaultTime"-->
<!--                style ="@style/EditText" />-->
<!--        </TableRow>-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginVertical="8dp"
                android:layout_weight="33"
                android:background="@drawable/twcolor"
                android:clickable="true"
                android:focusable="true"
                android:textSize="24sp"
                android:text="@string/pause"
                android:visibility="invisible"
                style="@style/ButtonMain"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="33"
                android:textSize="24sp"
                android:background="@drawable/twcolor"
                android:clickable="true"
                android:focusable="true"
                android:text="STOP"
                android:visibility="invisible"
                style="@style/ButtonMain" />
            <Button
                android:id="@+id/button_run"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="33"
                android:textSize="24sp"
                android:background="@drawable/twcolor"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/run"
                android:visibility="visible"
                style="@style/ButtonMain"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>