<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraint_layout"
        android:background="@color/colorPrimaryLightSuper">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table_layout"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout">
            <TableRow
                android:id="@+id/inhale_tr">
            <EditText
                    android:id="@+id/inhale_tv"
                    android:layout_width="154dp"
                    android:layout_height="80dp"
                    android:layout_margin="8dp"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="48sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inhale"
                android:layout_margin="8dp"
                android:textSize="48sp"/>
            </TableRow>
            <TableRow
                android:id="@+id/first_pause_tr">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pause"
                    android:layout_margin="8dp"
                    android:textSize="48sp"/>
                <EditText
                    android:id="@+id/first_pause_tv"
                    android:layout_width="154dp"
                    android:layout_height="80dp"
                    android:inputType="number"
                    android:layout_margin="8dp"
                    android:text="00"
                    android:textAlignment="center"
                    android:textSize="48sp" />
            </TableRow>
            <TableRow
                android:id="@+id/exhale_tr">
                <EditText
                    android:id="@+id/exhale_tv"
                    android:layout_width="154dp"
                    android:layout_height="80dp"
                    android:inputType="number"
                    android:layout_margin="8dp"
                    android:text="00"
                    android:textAlignment="center"
                    android:textSize="48sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exhale"
                    android:layout_margin="8dp"
                    android:textSize="48sp"/>
            </TableRow>
            <TableRow
                android:id="@+id/second_pause_tr">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pause"
                    android:layout_margin="8dp"
                    android:textSize="48sp"/>
                <EditText
                    android:id="@+id/second_pause_tv"
                    android:layout_width="154dp"
                    android:layout_height="80dp"
                    android:inputType="number"
                    android:text="00"
                    android:textAlignment="center"
                    android:layout_margin="8dp"
                    android:textSize="48sp" />
            </TableRow>
        </TableLayout>
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_indicator_second_pause"
            android:indeterminate="false"
            app:layout_constraintTop_toBottomOf="@+id/table_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/twcolor"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/start"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_indicator_second_pause" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>